Estilizando os bitões

--- a/index.html
+++ b/index.html
@@ -11,7 +11,16 @@
 </head>
 <body>
   <div class="container">
-    <h1>opa aqui quem fala é o Edu</h1>
+    <div class="flex gap">
+      <button class="btn btn-sm">Label</button>
+      <button class="btn btn-md">Label</button>
+      <button class="btn btn-lg">Label</button>
+    </div>
+    <div class="flex gap">
+      <button aria-label="Label" class="btn btn-sm"></button>
+      <button aria-label="Label" class="btn btn-md"></button>
+      <button aria-label="Label" class="btn btn-lg"></button>
+    </div>
   </div>
 </body>
 </html>
