--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -7,20 +8,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Zingen</title>
   <link rel="stylesheet" href="styles/index.css">
-  <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+    rel="stylesheet">
 </head>
+
 <body>
   <div class="container">
-    <div class="flex gap">
-      <button class="btn btn-sm">Label</button>
-      <button class="btn btn-md">Label</button>
-      <button class="btn btn-lg">Label</button>
-    </div>
-    <div class="flex gap">
-      <button aria-label="Label" class="btn btn-sm"></button>
-      <button aria-label="Label" class="btn btn-md"></button>
-      <button aria-label="Label" class="btn btn-lg"></button>
-    </div>
+    <a href="#" class="social" aria-label="tiktok"></a>
+    <a href="#" class="social" aria-label="instagram"></a>
+    <a href="#" class="social" aria-label="twitter"></a>
+    <a href="#" class="social" aria-label="discord"></a>
   </div>
 </body>
+
 </html>
