--- a/index.html
+++ b/index.html
@@ -23,10 +23,23 @@
         <a href="#about" class="desktop-only">Conheça o app</a>
         <a href="#features" class="desktop-only">Funcionalidades</a>
         <a href="#pricing" class="desktop-only">Planos e preços</a>
-        <a href="" class="btn btn-sm">Baixar agora</a>
+        <a href="#download" class="btn btn-sm">Baixar agora</a>
       </nav>
     </div>
   </header>
+
+  <section id="hero">
+    <div class="container py-xl">
+      <img src="assets/images/music-bars.svg" alt="">
+      <h1>Quem canta seus males espanta</h1>
+      <p>Cantar nunca foi tão fácil</p>
+
+      <div class="buttons flex items-center gap-1">
+        <a href="#pricing" aria-label="Ver planos" class="btn btn-md"></a>
+        <a href="#download" class="btn btn-md">Baixar agora</a>
+      </div>
+    </div>
+  </section>
 </body>
 
 </html>
