--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
           <h3>Básico</h3>
           <p>Baixe o app e comece a cantar agora mesmo!</p>
           <zin-pricing>Grátis</zin-pricing>
-          <a class="btn btn-md" aria-label="Baixar agora" href="" id=""></a>
+          <a class="btn btn-md" aria-label="Baixar agora" href="#download" id=""></a>
           <div class="separator"></div>
           <ul role="list" class="grid gap-1">
             <li>Com anúncios</li>
